<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="hernandes.jo.gistcommenter.fragments.CommentFragment">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        android:padding="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/GistHeader_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/textview_createComment_header" />

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/shape_grey_box"
                android:layout_margin="5dp"
                android:id="@+id/edittext_commentFragment_commentary"
                android:gravity="top|start"
                android:padding="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                >
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_custom_inverse_button"
                    android:textColor="@color/white_button_color"
                    android:text="@string/negative_dialog"
                    android:layout_margin="3dp"
                    android:id="@+id/button_commentFragment_cancel"
                    />

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_custom_button"
                    android:textColor="@color/white_button_text"
                    android:text="@string/positive_dialog"
                    android:layout_margin="3dp"
                    android:id="@+id/button_commentFragment_done"
                    />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</FrameLayout>
