<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hernandes.jo.gistcommenter.activities.GistActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/imageview_gistHeader_profile"
            android:src="@drawable/shape_github_icon"
            android:padding="5dp"
            android:layout_gravity="center"
            android:contentDescription="@string/gistheader_iconDescription"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:gravity="center"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="GITHUB USER NAME"
                style="@style/GistHeader_Title"
                android:id="@+id/textview_gistHeader_userName"
                />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="GITHUB USER TYPE"
                style="@style/GistHeader_Info"
                android:lines="1"
                android:id="@+id/textview_gistHeader_userType"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="GITHUB USER URL"
                style="@style/GistHeader_Info"
                android:id="@+id/textview_gistHeader_userURL"
                android:lines="1"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_margin="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gistHeader_description"
                style="@style/GistHeader_Title"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="GIST INFO \nGIST INFO"
                style="@style/GistHeader_Info"
                android:lines="2"
                android:id="@+id/textview_gistHeader_gistInfo"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:text="@string/visit_gist"
        android:background="@drawable/shape_custom_button"
        android:textColor="@color/white_button_text"
        android:layout_margin="10dp"
        android:id="@+id/button_gistHeader_gistButton"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_margin="5dp"
        />

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/refreshLayout_gistComments_reloadComments"
        >
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerview_gistComments_comments"
            />

    </android.support.v4.widget.SwipeRefreshLayout>



</LinearLayout>